Fixed the rolled-up view so now it annotates the passes for both children and edges (only if a node's edges vary across passes).

--- a/test_func_handling.ipynb
+++ b/test_func_handling.ipynb
@@ -6,45 +6,94 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import copy\n",
+    "\n",
+    "os.chdir('/home/jtaylor/projects/pytorch-xray')\n",
+    "from tensor_tracking import initialize_history_dict\n",
+    "\n",
+    "import torch\n",
+    "from torch_func_handling import orig_torch_funcs, mutate_pytorch, unmutate_pytorch, ignored_funcs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "<attribute 'T' of 'torch._C._TensorBase' objects>",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
-      "\u001B[0;32m/tmp/ipykernel_599241/2831994964.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[0mos\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mchdir\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'/home/jtaylor/projects/pytorch-xray'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mtorch\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 5\u001B[0;31m \u001B[0;32mfrom\u001B[0m \u001B[0mtorch_func_handling\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0morig_torch_funcs\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mmutate_pytorch\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0munmutate_pytorch\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mignored_funcs\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0moverrideable_funcs\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[0;32m~/projects/pytorch-xray/torch_func_handling.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m    191\u001B[0m \u001B[0moverrideable_funcs\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;34m[\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    192\u001B[0m \u001B[0;32mfor\u001B[0m \u001B[0mnamespace\u001B[0m \u001B[0;32min\u001B[0m \u001B[0moverrideable_funcs_dict\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 193\u001B[0;31m     \u001B[0mnamespace_str\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0moverrideable_funcs_namespace_dict\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mnamespace\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    194\u001B[0m     \u001B[0;32mfor\u001B[0m \u001B[0mfunc\u001B[0m \u001B[0;32min\u001B[0m \u001B[0moverrideable_funcs_dict\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mnamespace\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    195\u001B[0m         \u001B[0moverrideable_funcs\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mnamespace_str\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mfunc\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m__name__\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mKeyError\u001B[0m: <attribute 'T' of 'torch._C._TensorBase' objects>"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dumb\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "tensor([[1., 1., 1., 1., 1.],\n        [1., 1., 1., 1., 1.],\n        [1., 1., 1., 1., 1.],\n        [1., 1., 1., 1., 1.],\n        [1., 1., 1., 1., 1.]])"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import os\n",
+    "def dumb_func():\n",
+    "    print(\"dumb\")\n",
     "\n",
-    "os.chdir('/home/jtaylor/projects/pytorch-xray')\n",
-    "import torch\n",
-    "from torch_func_handling import orig_torch_funcs, mutate_pytorch, unmutate_pytorch, ignored_funcs, overrideable_funcs"
-   ]
+    "\n",
+    "orig_ones = copy.copy(torch.ones)\n",
+    "torch.ones = dumb_func\n",
+    "torch.ones()\n",
+    "torch.ones = orig_ones\n",
+    "torch.ones(5, 5)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "outputs": [
     {
-     "data": {
-      "text/plain": "tensor([[1., 1., 1., 1., 1.],\n        [1., 1., 1., 1., 1.],\n        [1., 1., 1., 1., 1.],\n        [1., 1., 1., 1., 1.],\n        [1., 1., 1., 1., 1.]])"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1., 1.]])\n"
+     ]
     }
    ],
    "source": [
-    "import torch\n",
+    "import os\n",
+    "import copy\n",
     "\n",
-    "torch.ones(5, 5)"
+    "os.chdir('/home/jtaylor/projects/pytorch-xray')\n",
+    "from tensor_tracking import initialize_history_dict\n",
+    "\n",
+    "import torch\n",
+    "from tensor_tracking import mutate_pytorch, unmutate_pytorch\n",
+    "\n",
+    "orig_func_defs = []\n",
+    "history_dict = initialize_history_dict('all')\n",
+    "orig_func_defs = mutate_pytorch(torch, [], orig_func_defs, history_dict)\n",
+    "#print(torch.ones(5, 5))\n",
+    "unmutate_pytorch(torch, orig_func_defs)\n",
+    "print(torch.ones(5, 5))"
    ],
    "metadata": {
     "collapsed": false
