Added __init__.py and set up how it imports.

--- a/demos/demos.ipynb
+++ b/demos/demos.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "os.chdir('/home/jtaylor/projects/pytorch-xray')\n",
     "import torch\n",
-    "from pytorch_xray import xray_model\n",
+    "from torchlens\n",
     "import torchvision\n",
     "import graph_funcs as gf\n",
     "from model_funcs import run_model_and_save_specified_activations\n",
