Made most of the tutorial notebook; remaining steps are to get the layer selection working, add the remaining example networks, port the notebooks to colab, and make a shorter demos notebook.

--- a/demos/demos.ipynb
+++ b/demos/demos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -11,8 +11,19 @@
     "import torch\n",
     "from torch import nn\n",
     "import torchvision\n",
-    "import torchlens as tl\n"
+    "import torchlens as tl\n",
+    "\n",
+    "# Have a selection of networks, showing the visualizing and indexing capabilities\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
