--- a/demos/tutorial.ipynb
+++ b/demos/tutorial.ipynb
@@ -716,7 +716,7 @@
    "source": [
     "Torchlens can also deal with models with:\n",
     "- Branching\n",
-    "- If-then logic that can change the computation graph based on input values\n",
+    "- If-then control flow that can change the computation graph based on input values\n",
     "- Tensors that are generated inside the network (e.g., with torch.ones, torch.zeros, torch.rand, etc.) rather than coming from the input\n",
     "- Randomness (here, you can set the random seed to make sure you get the same outputs from each pass)\n",
     "- Models with a nested modular structure.\n",
@@ -743,7 +743,7 @@
    "execution_count": 43,
    "outputs": [],
    "source": [
-    "# If-then example"
+    "# If-then control flow"
    ],
    "metadata": {
     "collapsed": false
@@ -785,7 +785,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The goal of torchlens is to work for any PyTorch model whatsoever. It has been tested for all models in torchvision's model zoo, but to validate the correctness of any saved activations for untested models, there is one more core function, validate_saved_activations, which algorithmically verifies that the model's activations are correctly saved by re-running the forward pass from each intermediate step of the model based on the saved activations and checking that the resulting output matches the ground truth. Additionally, as a further check, it substitutes in random nonsense activations in place of the saved activations during each step of this validation procedure, and verifies that the resulting output does *not* match the ground truth output. This function returns True if the saved activations pass this test, and False otherwise. **Please email johnmarkedwardtaylor@gmail.com if this ever returns False and torchlens will be updated to work with your model; this would be greatly appreciated, since it means you found a missing edge case that will also help improve torchlens for other users who might have a model with the same quirks.**\n"
+    "The goal of torchlens is to work for any PyTorch model whatsoever. It has been tested for all models in torchvision's model zoo, but to validate the correctness of any saved activations for untested models, there is one more core function, validate_saved_activations, which algorithmically verifies that the model's activations are correctly saved by re-running the forward pass from each intermediate step of the model based on the saved activations and checking that the resulting output matches the ground truth. Additionally, as a further check, it substitutes in random nonsense activations in place of the saved activations during each step of this validation procedure, and verifies that the resulting output does *not* match the ground truth output. This function returns True if the saved activations pass this test, and False otherwise. **Please email johnmarkedwardtaylor@gmail.com if this ever returns False and torchlens will be updated to work with your model; this would be greatly appreciated, since it means you found a missing edge case that will also help improve torchlens for other users who might have a model with similar quirks.**\n"
    ],
    "metadata": {
     "collapsed": false
