Made most of the tutorial notebook; remaining steps are to get the layer selection working, add the remaining example networks and order them nicely, port the notebooks to colab, write the readme, add installation instructions, and make a shorter demos notebook.

--- a/demos/tutorial.ipynb
+++ b/demos/tutorial.ipynb
@@ -6,7 +6,7 @@
     "**Torchlens** is a Python package for easily extracting and understanding the results of every single operation performed inside a PyTorch neural network model.  Its core functionality includes:\n",
     "1. extracting the activations from any intermediate computation inside a PyTorch neural network model,\n",
     "2. fully characterizing where those activations come from, via providing a complete log of every operation that happens during a model's forward pass, and\n",
-    "3. visualizing the complete computation graph of a model's forward pass.\n",
+    "3. visualizing the complete computation graph of the model's forward pass.\n",
     "\n",
     "This notebook demonstrates how to use torchlens."
    ],
@@ -214,7 +214,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Finally, you can also pull out activations based on any modules that they're the output of (at any level of module nesting):\n"
+    "Finally, you can also pull out activations based on any modules for which they are the output (at any level of module nesting):\n"
    ],
    "metadata": {
     "collapsed": false
@@ -222,46 +222,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "*****These are the activations from the 'features' module of AlexNet (prior to the fully connected layers)*****\n",
-      "Layer maxpool2d_3_13, operation 14/24 (2.835E-04s elapsed):\n",
-      "\tOutput tensor: shape=(6, 256, 7, 7), dype=torch.float32, size=294.1 KB\n",
-      "\t\ttensor([[0., 0., 0., 0., 0.],\n",
-      "        [0., 0., 0., 0., 0.],\n",
-      "        [0., 0., 0., 0., 0.],\n",
-      "        [0., 0., 0., 0., 0.],\n",
-      "        [0., 0., 0., 0., 0.]])...\n",
-      "\tParams: no params used\n",
-      "\tParent Layers: relu_5_12\n",
-      "\tChild Layers: adaptiveavgpool2d_1_14\n",
-      "\tFunction: max_pool2d (gradfunc=MaxPool2DWithIndicesBackward) \n",
-      "\tComputed inside module: features.12\n",
-      "\tOutput of modules: features.12, features\n",
-      "\tOutput of bottom-level module: features.12\n",
-      "\tLookup keys: -11, 13, features, features.12, features.12:1, features:1, maxpool2d_3_13, maxpool2d_3_13:1\n",
-      "\n",
-      "\n",
-      "*****These are the activations from the third submodule in the 'decoder' module of AlexNet*****\n",
-      "Layer relu_6_18, operation 19/24 (3.664E-04s elapsed):\n",
-      "\tOutput tensor: shape=(6, 4096), dype=torch.float32, size=96.1 KB\n",
-      "\t\ttensor([[0.0000, 0.4548, 0.0000, 0.0753, 2.3563],\n",
-      "        [0.0000, 0.8594, 0.0000, 0.0000, 2.3870],\n",
-      "        [0.0000, 1.8678, 0.0000, 0.5409, 2.0357],\n",
-      "        [0.0000, 1.2434, 0.0000, 0.0038, 2.8494],\n",
-      "        [0.0000, 1.2814, 0.0000, 0.5919, 2.1346]], grad_fn=<SliceBackward>)...\n",
-      "\tParams: no params used\n",
-      "\tParent Layers: linear_1_17\n",
-      "\tChild Layers: dropout_2_19\n",
-      "\tFunction: relu (gradfunc=ReluBackward1) \n",
-      "\tComputed inside module: classifier.2\n",
-      "\tOutput of modules: classifier.2\n",
-      "\tOutput of bottom-level module: classifier.2\n",
-      "\tLookup keys: -6, 18, classifier.2, classifier.2:1, relu_6_18, relu_6_18:1\n"
+      "*****These are the activations from the 'features' module of AlexNet (prior to the fully connected layers)*****\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Layer index not recognized; please specify either \n\t1) an integer giving the ordinal position of the layer, \n\t2) the layer label (e.g., input_1_0:1, linear_1_1), \n\t3) the module address (e.g., fc, fc:4\n(conv2d_3_4:2 means the second pass of layer conv2d_3_4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[0;32m/tmp/ipykernel_3967083/1309305479.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"*****These are the activations from the 'features' module of AlexNet (prior to the fully connected layers)*****\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 2\u001B[0;31m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mmodel_history\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'features'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      3\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"\\n\\n*****These are the activations from the third submodule in the 'classifier' module of AlexNet*****\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mmodel_history\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'classifier.2'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/projects/torchlens/torchlens/graph_handling.py\u001B[0m in \u001B[0;36m__getitem__\u001B[0;34m(self, ix)\u001B[0m\n\u001B[1;32m   1757\u001B[0m                 \u001B[0msample_module2\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mrandom\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mchoice\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmodule_passes\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   1758\u001B[0m                 \u001B[0mmodule_str\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;34mf\"(e.g., {sample_module1}, {sample_module2}\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m-> 1759\u001B[0;31m             raise ValueError(f\"Layer index not recognized; please specify either \\n\\t1) an integer giving \"\n\u001B[0m\u001B[1;32m   1760\u001B[0m                              \u001B[0;34mf\"the ordinal position of the layer, \\n\\t2) the layer label (e.g., {sample_layer1}, \"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   1761\u001B[0m                              \u001B[0;34mf\"{sample_layer2}), \\n\\t3) the module address {module_str})\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mValueError\u001B[0m: Layer index not recognized; please specify either \n\t1) an integer giving the ordinal position of the layer, \n\t2) the layer label (e.g., input_1_0:1, linear_1_1), \n\t3) the module address (e.g., fc, fc:4\n(conv2d_3_4:2 means the second pass of layer conv2d_3_4)"
      ]
     }
    ],
@@ -286,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "outputs": [
     {
      "name": "stdout",
@@ -489,8 +468,8 @@
    "source": [
     "By default, torchlens saves the results of all the intermediate operations in a model. This will always only take just one line of code. However, for big models this might eat up a lot of memory, and maybe you want to take a look at what's going on in the model first so you can choose which layers you want. In this case, two other functions will come in handy (note that these provide just a subset of the functionality of get_model_activations):\n",
     "\n",
-    "1. show_model_graph, which will visualize the model's forward pass without saving any activations.\n",
-    "2. get_model_structure, which will pull out all the same graph metadata (in the same format) as get_model_activations without saving the tensors themselves, and\n"
+    "1. show_model_graph, which will visualize the model's forward pass without saving any activations, and\n",
+    "2. get_model_structure, which will pull out all the same graph metadata (in the same format) as get_model_activations without saving the tensors themselves.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -522,7 +501,7 @@
     "The graph visual shows you everything that happens in the model's forward pass:\n",
     "- Each node of the graph is a tensor, with input tensors in green, output tensors in red, and tensors from operations associated with parameters in grey (e.g., convolutions are grey since they have saved weights, whereas relus are white, since they have no saved parameters).\n",
     "- Nodes are rectangular if they correspond to outputs of a module (e.g., conv2d_1_1), and ovals if they are outputs of operations that are not a module (e.g., flatten_1_15).\n",
-    "- The text in each node tells you the layer name (e.g., conv2d_1_1), the shape and file size of the output tensor, the shape of any params if applicable, and the \"module address\" of the layer (e.g., 'features.1' refers to the module features.1 of AlexNet)\n",
+    "- The text in each node tells you the layer name (e.g., conv2d_1_1), the shape and file size of the output tensor, the shape of any params if applicable, and the \"module address\" of the layer (e.g., 'features.1' refers to the module features.1 of AlexNet).\n",
     "- Box outlines show higher-level modules (e.g., AlexNet's 'features' module) that contain multiple operations.\n",
     "- Finally, the visual also indicates the total number of tensors saved and their collective file size, along with the number of model parameters and associated file size."
    ],
@@ -541,13 +520,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "outputs": [
     {
      "data": {
-      "text/plain": "Log of AlexNet forward pass (0.294s elapsed):\n\tModel structure: purely feedforward, without branching; 23 total modules.\n\t24 tensors (37.6 MB) computed in forward pass; 0 tensors (0 B) saved.\n\t16 parameter operations (61100840 params total; 248.7 MB).\n\tRandom seed: 3565071100\n\tModule Hierarchy (based on computation order, not on the model object structure):\n\t\tfeatures:\n\t\t    features.0, features.1, features.2, features.3, features.4, features.5, features.6, features.7, \n\t\t    features.8, features.9, features.10, features.11, features.12\n\t\tavgpool\n\t\tclassifier:\n\t\t    classifier.0, classifier.1, classifier.2, classifier.3, classifier.4, classifier.5, classifier.6\n\tLayers:\n\t\t0: input_1_0 \n\t\t1: conv2d_1_1 \n\t\t2: relu_1_2 \n\t\t3: maxpool2d_1_3 \n\t\t4: conv2d_2_4 \n\t\t5: relu_2_5 \n\t\t6: maxpool2d_2_6 \n\t\t7: conv2d_3_7 \n\t\t8: relu_3_8 \n\t\t9: conv2d_4_9 \n\t\t10: relu_4_10 \n\t\t11: conv2d_5_11 \n\t\t12: relu_5_12 \n\t\t13: maxpool2d_3_13 \n\t\t14: adaptiveavgpool2d_1_14 \n\t\t15: flatten_1_15 \n\t\t16: dropout_1_16 \n\t\t17: linear_1_17 \n\t\t18: relu_6_18 \n\t\t19: dropout_2_19 \n\t\t20: linear_2_20 \n\t\t21: relu_7_21 \n\t\t22: linear_3_22 \n\t\t23: output_1_23 "
+      "text/plain": "Log of AlexNet forward pass (0.259s elapsed):\n\tModel structure: purely feedforward, without branching; 23 total modules.\n\t24 tensors (37.6 MB) computed in forward pass; 0 tensors (0 B) saved.\n\t16 parameter operations (61100840 params total; 248.7 MB).\n\tRandom seed: 1859914498\n\tModule Hierarchy (based on computation order, not on the model object structure):\n\t\tfeatures:\n\t\t    features.0, features.1, features.2, features.3, features.4, features.5, features.6, features.7, \n\t\t    features.8, features.9, features.10, features.11, features.12\n\t\tavgpool\n\t\tclassifier:\n\t\t    classifier.0, classifier.1, classifier.2, classifier.3, classifier.4, classifier.5, classifier.6\n\tLayers:\n\t\t0: input_1_0 \n\t\t1: conv2d_1_1 \n\t\t2: relu_1_2 \n\t\t3: maxpool2d_1_3 \n\t\t4: conv2d_2_4 \n\t\t5: relu_2_5 \n\t\t6: maxpool2d_2_6 \n\t\t7: conv2d_3_7 \n\t\t8: relu_3_8 \n\t\t9: conv2d_4_9 \n\t\t10: relu_4_10 \n\t\t11: conv2d_5_11 \n\t\t12: relu_5_12 \n\t\t13: maxpool2d_3_13 \n\t\t14: adaptiveavgpool2d_1_14 \n\t\t15: flatten_1_15 \n\t\t16: dropout_1_16 \n\t\t17: linear_1_17 \n\t\t18: relu_6_18 \n\t\t19: dropout_2_19 \n\t\t20: linear_2_20 \n\t\t21: relu_7_21 \n\t\t22: linear_3_22 \n\t\t23: output_1_23 "
      },
-     "execution_count": 29,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +604,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Sometimes your model may contain recurrent connections, where a given operation is applied multiple times with the same parameters. Torchlens fully supports such networks, and can visualize them in both \"unrolled\" format (showing each pass of each layer separately), or \"rolled\" format (indicating passes of a given layer as one node; edges are labeled based on which passes they correspond to, e.g. if the arrow has \"1-3\" that means that's where it goes or comes from for passes 1-3 of that layer):"
+    "Sometimes your model may contain recurrent connections, where a given operation is applied multiple times with the same parameters. Torchlens fully supports such networks, and can visualize them in both \"unrolled\" format (showing each pass of each layer separately), or \"rolled\" format (indicating passes of a given layer as one node; edges are labeled based on which passes they correspond to, e.g. if the arrow has \"1-3\" that means that's where it goes or comes from for the first, second, and third passes of that layer):"
    ],
    "metadata": {
     "collapsed": false
@@ -684,7 +663,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Different passes of a layer are indicated with a colon: for instance, 'linear_1_1:2' means the second pass of this layer. By default, torchlens adopts the convention that different operations are considered part of the same \"layer\" if the same parameters are applied for those operations (e.g., here the same set of fully connected weights is applied four times during the forward pass), **or** if an operation follows such a layer (e.g., the add and multiply operations after each fully conencted layer in this example model). These separate passes can be pulled out by indexing the model_history object:"
+    "Different passes of a layer are indicated with a colon: for instance, 'linear_1_1:2' means the second pass of this layer. By default, torchlens adopts the convention that different operations are considered part of the same \"layer\" if the same parameters are applied for those operations (e.g., here the same set of fully connected weights is applied four times during the forward pass), **or** if an operation follows such a layer (e.g., the add and multiply operations after each fully conencted layer in this example model). These separate passes can be pulled out by indexing the model_history object as usual:"
    ],
    "metadata": {
     "collapsed": false
@@ -785,7 +764,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The goal of torchlens is to work for any PyTorch model whatsoever. It has been tested for all models in torchvision's model zoo, but to validate the correctness of any saved activations for untested models, there is one more core function, validate_saved_activations, which algorithmically verifies that the model's activations are correctly saved by re-running the forward pass from each intermediate step of the model based on the saved activations and checking that the resulting output matches the ground truth. Additionally, as a further check, it substitutes in random nonsense activations in place of the saved activations during each step of this validation procedure, and verifies that the resulting output does *not* match the ground truth output. This function returns True if the saved activations pass this test, and False otherwise. **Please email johnmarkedwardtaylor@gmail.com if this ever returns False and torchlens will be updated to work with your model; this would be greatly appreciated, since it means you found a missing edge case that will also help improve torchlens for other users who might have a model with similar quirks.**\n"
+    "The goal of torchlens is to work for any PyTorch model whatsoever. It has been tested for all models in torchvision's model zoo, but to validate the correctness of any saved activations for untested models, there is one more core function, validate_saved_activations, which algorithmically verifies that the model's activations are correctly saved by re-running the forward pass from each intermediate step of the model based on the saved activations and checking that the resulting output matches the ground truth. Additionally, as a further check, it substitutes in random nonsense activations in place of the saved activations during each step of this validation procedure, and verifies that the resulting output does *not* match the ground truth output. This function returns True if the saved activations pass this test, and False otherwise.\n",
+    "\n",
+    "**Please email johnmarkedwardtaylor@gmail.com if this ever returns False and torchlens will be updated to work with your model; this would be greatly appreciated, since it means you found a missing edge case that will also help improve torchlens for other users who might have a model with similar quirks.**\n"
    ],
    "metadata": {
     "collapsed": false
@@ -793,13 +774,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 52,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,6 +789,24 @@
     "x = torch.rand(6, 3, 256, 256)\n",
     "tl.validate_saved_activations(alexnet, x)\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "And that's it: one main function (get_model_activations), two secondary functions (get_model_structure and show_model_graph) to help select subsets of layers to save if so desired, and a sanity-check function (validate_saved_activations) to verify the correctness of saved activations.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
