Now it transiently sets all model params to requires_grad (and changes back after) to make everything work.

--- a/demos/gallery.ipynb
+++ b/demos/gallery.ipynb
@@ -11,9 +11,7 @@
     "import torch\n",
     "from torch import nn\n",
     "import torchvision\n",
-    "import torchlens as tl\n",
-    "\n",
-    "# Have a selection of networks, showing the visualizing and indexing capabilities\n"
+    "import torchlens as tl\n"
    ]
   },
   {
